--- a/docs/partner_editable/service_limits.adoc
+++ b/docs/partner_editable/service_limits.adoc
@@ -7,4 +7,6 @@
 |IAM roles |2
 |Network Load Balancers |1
 |EC2 instances |1
+|Route 53 Private Hosted Zone|1
+|Route 53 Private Hosted Zone Entry|1
 |===
