--- a/docs/partner_editable/architecture.adoc
+++ b/docs/partner_editable/architecture.adoc
@@ -1,4 +1,4 @@
-Deploying this Quick Start for a new virtual private cloud (VPC) with
+Deploying this Quick Start for a new virtual private cloud (VPC) and new EKS cluster
 default parameters builds the following {partner-product-short-name} environment in the
 AWS Cloud.
 
@@ -11,7 +11,7 @@ image::../images/architecture_diagram.png[Architecture,width=100%,height=100%]
 
 As shown in <<architecture1>>, the Quick Start sets up the following:
 
-* A highly available architecture that spans two Availability Zones.*
+* A highly available architecture that spans three Availability Zones.*
 * A VPC configured with public and private subnets, according to AWS
 best practices, to provide you with your own virtual network on AWS.*
 * In the public subnets:
@@ -20,9 +20,11 @@ internet access for resources in the private subnets.*
 ** A Linux bastion host in an Auto Scaling group to allow inbound Secure
 Shell (SSH) access to EC2 instances in public and private subnets.*
 * In the private subnets:
-** <item>.
-** <item>.
+** An Amazon EKS cluster, which provides the Kubernetes control plane.*
+** A group of Kubernetes nodes.*
+** Rancher deployed using AWS Systems Manager automation.
+** A network load balancer (NLB) for accessing the Rancher console.
 // Add bullet points for any additional components that are included in the deployment. Make sure that the additional components are also represented in the architecture diagram. End each bullet with a period.
-* <describe any additional components>.
+* A Route 53 DNS record for easily accessing the Rancher deployment.
 
-[.small]#*The template that deploys the Quick Start into an existing VPC skips the components marked by asterisks and prompts you for your existing VPC configuration.#
+[.small]#*The template that deploys the Quick Start into an existing EKS cluster skips the components marked by asterisks and prompts you for your existing VPC configuration.#
