--- a/docs/partner_editable/regions.adoc
+++ b/docs/partner_editable/regions.adoc
@@ -1,1 +1,1 @@
-This Quick Start is supported in any AWS Region in which Amazon Elastic Kubernetes Service (EKS) is supported. See the https://docs.aws.amazon.com/general/latest/gr/eks.html[EKS Documentation] page for a list of supported Regions.
+This Quick Start is supported in any AWS Region in which Amazon Elastic Kubernetes Service (EKS) is supported. For a list of supported Regions, see https://docs.aws.amazon.com/general/latest/gr/eks.html[Amazon Elastic Kubernetes Service endpoints and quotas^].
