--- a/docs/partner_editable/architecture.adoc
+++ b/docs/partner_editable/architecture.adoc
@@ -20,11 +20,11 @@ internet access for resources in the private subnets.*
 ** A Linux bastion host in an Auto Scaling group to allow inbound Secure
 Shell (SSH) access to Amazon Elastic Compute Cloud (Amazon EC2) instances in public and private subnets.*
 * In the private subnets:
-** An Amazon EKS cluster, which provides the Kubernetes control plane.*
 ** A group of Kubernetes nodes.*
-** Rancher deployment using AWS Systems Manager automation.
 ** A Network Load Balancer for accessing the Rancher console.
 // Add bullet points for any additional components that are included in the deployment. Make sure that the additional components are also represented in the architecture diagram. End each bullet with a period.
-* A Route 53 DNS record for accessing the Rancher deployment.
+* Rancher deployment using AWS Systems Manager automation.
+* Amazon Elastic Container Kubernetes for the Amazon EKS cluster, which provides the Kubernetes control plane.*
+* An Amazon Route 53 DNS record for accessing the Rancher deployment.
 
 [.small]#*The template that deploys the Quick Start into an existing Amazon EKS cluster skips the components marked by asterisks and prompts you for your existing VPC configuration.#
