--- a/docs/partner_editable/_settings.adoc
+++ b/docs/partner_editable/_settings.adoc
@@ -5,7 +5,7 @@
 :partner-product-short-name: Rancher
 // If there's no partner, comment partner-company-name and partner-contributors.
 :partner-company-name: Rancher Labs
-:doc-month: January
+:doc-month: February
 :doc-year: 2021
 // For the following two "contributor" attributes, if the partner agrees to include names in the byline, 
 // enter names for both partner-contributors and quickstart-contributors. 
@@ -18,7 +18,7 @@
 // for example, 30 minutes or 60 minutes. 
 // Use hours for deployment times greater than 60 minutes (rounded to a quarter hour),
 // for example, 1.25 hours, 2 hours, 2.5 hours.
-:deployment_time: 30 minutes
+:deployment_time: 0.5–2.5 hours
 :default_deployment_region: us-east-1
 // Uncomment the following two attributes if you are using an AWS Marketplace listing.
 // Additional content will be generated automatically based on these attributes.
