--- a/docs/partner_editable/architecture.adoc
+++ b/docs/partner_editable/architecture.adoc
@@ -16,15 +16,15 @@ As shown in <<architecture1>>, the Quick Start sets up the following:
 best practices, to provide you with your own virtual network on AWS.*
 * In the public subnets:
 ** Managed network address translation (NAT) gateways to allow outbound
-internet access for resources in the private subnets.*
-** A Linux bastion host in an Auto Scaling group to allow inbound Secure
+internet access for resources.*
+** Linux bastion hosts in an Auto Scaling group to allow inbound Secure
 Shell (SSH) access to Amazon Elastic Compute Cloud (Amazon EC2) instances in public and private subnets.*
 * In the private subnets:
-** A group of Kubernetes nodes.*
-** A Network Load Balancer for accessing the Rancher console.
+** Kubernetes nodes in an Auto Scaling group.*
+** A Network Load Balancer (not shown) for accessing the Rancher console.
 // Add bullet points for any additional components that are included in the deployment. Make sure that the additional components are also represented in the architecture diagram. End each bullet with a period.
 * Rancher deployment using AWS Systems Manager automation.
-* Amazon Elastic Container Kubernetes for the Amazon EKS cluster, which provides the Kubernetes control plane.*
+* Amazon EKS service for the EKS cluster, which provides the Kubernetes control plane.*
 * An Amazon Route 53 DNS record for accessing the Rancher deployment.
 
 [.small]#*The template that deploys the Quick Start into an existing Amazon EKS cluster skips the components marked by asterisks and prompts you for your existing VPC configuration.#
