--- a/docs/partner_editable/deploy_steps.adoc
+++ b/docs/partner_editable/deploy_steps.adoc
@@ -29,13 +29,13 @@ NOTE: You are responsible for the cost of the AWS services used while running th
 
 [cols=2*]
 |===
-^|http://qs_launch_link[Deploy {partner-product-short-name} into a new VPC and new Amazon EKS cluster^]
+^|https://fwd.aws/w684k[Deploy {partner-product-short-name} into a new VPC and new Amazon EKS cluster^]
 ^|https://github.com/aws-quickstart/quickstart-amazon-eks/blob/main/templates/amazon-eks-entrypoint-new-vpc.template.yaml[View template^]
 
-^|http://qs_launch_link[Deploy {partner-product-short-name} into an existing VPC and a new Amazon EKS cluster^]
+^|https://fwd.aws/xpxKq[Deploy {partner-product-short-name} into an existing VPC and a new Amazon EKS cluster^]
 ^|https://github.com/aws-quickstart/quickstart-eks-rancher/blob/main/templates/rancher.template.yaml[View template^]
 
-^|http://qs_launch_link[Deploy {partner-product-short-name} into an existing VPC and existing Amazon EKS cluster^]
+^|https://fwd.aws/WEBE6[Deploy {partner-product-short-name} into an existing VPC and existing Amazon EKS cluster^]
 ^|https://aws-quickstart.s3.us-east-1.amazonaws.com/quickstart-amazon-eks/templates/amazon-eks-entrypoint-existing-vpc.template.yaml[View template^]
 |===
 
